--- a/Day1/style.css
+++ b/Day1/style.css
@@ -1,3 +1,13 @@
 body{
-    background-color: red;
+    background-color: rgb(0, 247, 255);
+}
+tr{
+    background-color: blueviolet;
+    color: beige;
+}
+table{
+    border-radius: 12px;
+    border-bottom: brown;
+    border-style: groove;
+    border-width: 5px;
 }
